[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/resources/Themes.tres" type="Theme" id=1]
[ext_resource path="res://src/resources/fonts/helvetica-rounded-bold-5871d05ead8de.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/resources/fonts/Helvetica.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/scenes/READ_PAGE.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="READ_PAGE" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_bottom = 115.0
theme = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "

[center][b][color=black]Leitor 3000[/color][/b][/center]"
text = "

Leitor 3000"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.021
anchor_top = 0.178
anchor_right = 0.979
anchor_bottom = 0.968
margin_left = -0.00400162
margin_top = 0.199997
margin_right = 0.00396729
margin_bottom = 0.199951
custom_constants/separation = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 278.0
margin_bottom = 473.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 278.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
text = "Dados do equipamento"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 278.0
margin_bottom = 46.0
size_flags_horizontal = 3
custom_constants/separation = 18

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 55.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "Cliente:"

[node name="client_label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 73.0
margin_right = 106.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "AAA"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 278.0
margin_bottom = 67.0
size_flags_horizontal = 3
custom_constants/separation = 18

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 99.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "Equipamento:"

[node name="equip_label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 117.0
margin_right = 150.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "BBB"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 278.0
margin_bottom = 88.0
size_flags_horizontal = 3
custom_constants/separation = 18

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 80.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "Fabricante:"

[node name="fab_label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 98.0
margin_right = 134.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "CCC"

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 278.0
margin_bottom = 109.0
size_flags_horizontal = 3
custom_constants/separation = 18

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_right = 94.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "Identificação:"

[node name="ID_label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 112.0
margin_right = 148.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "DDD"

[node name="HBoxContainer5" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 278.0
margin_bottom = 130.0
size_flags_horizontal = 3
custom_constants/separation = 18

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer5"]
margin_right = 118.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "Data de entrada:"

[node name="arrive_label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 169.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "EEE"

[node name="HBoxContainer6" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 278.0
margin_bottom = 151.0
size_flags_horizontal = 3
custom_constants/separation = 18

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer6"]
margin_right = 103.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "Data de saída:"

[node name="departure_label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
margin_left = 121.0
margin_right = 151.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "FFF"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 278.0
margin_bottom = 159.0

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 278.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
text = "Orçamento:"

[node name="budget_text" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 184.0
margin_right = 278.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
wrap_enabled = true

[node name="back" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 445.0
margin_right = 278.0
margin_bottom = 473.0
text = "Voltar"

[node name="Images" type="PanelContainer" parent="HBoxContainer"]
margin_left = 284.0
margin_right = 980.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Images"]
margin_left = 5.0
margin_top = 5.0
margin_right = 691.0
margin_bottom = 468.0
custom_styles/bg = SubResource( 3 )

[node name="image_container" type="VBoxContainer" parent="HBoxContainer/Images/ScrollContainer"]
unique_name_in_owner = true
margin_right = 686.0
size_flags_horizontal = 3

[connection signal="button_up" from="HBoxContainer/VBoxContainer/back" to="." method="_on_back_button_up"]
